Update project descriptions and update image filename for consistency

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         <div class="project-details">
           <span class="project-tag">Featured Project</span>
           <h2>Rental Management App</h2>
-          <p>A comprehensive full-stack rental management application that seamlessly syncs with major platforms like Airbnb and VRBO. Built with modern web technologies to provide property owners with a centralized dashboard for managing bookings, pricing, and guest communications.</p>
+          <p>A comprehensive full-stack rental application for both renters and owners that seamlessly syncs with major platforms like Airbnb and VRBO. Built with to provide property renters and owners with a centralized dashboard for managing bookings, pricing, and communications.</p>
           <div class="tech-stack">
             <span class="tech-tag">React</span>
             <span class="tech-tag">Node.js</span>
@@ -72,7 +72,7 @@
           </div>
           <div class="project-card-content">
             <h4>QR Code Generator</h4>
-            <p>A simple yet effective QR code generator built with Python and Flask. Features a clean web interface for generating custom QR codes with various formatting options.</p>
+            <p>A simple QR code generator built with Python and Flask. Features a web interface for custom QR codes with various formatting options.</p>
             <div class="tech-stack">
               <span class="tech-tag">Python</span>
               <span class="tech-tag">Flask</span>
@@ -91,11 +91,11 @@
 
         <div class="project-card">
           <div class="project-card-image">
-            <img src="images/project-three.png" alt="Personal Website">
+            <img src="images/project_three.png" alt="Personal Website">
           </div>
           <div class="project-card-content">
             <h4>Personal Portfolio Website</h4>
-            <p>This very website! A responsive portfolio showcasing my projects and experiences. Built with modern HTML, CSS, and JavaScript with a focus on clean design and performance.</p>
+            <p>A responsive portfolio showcasing my projects. Built with HTML, CSS, and JavaScript. For the live demo just press home in the top left!</p>
             <div class="tech-stack">
               <span class="tech-tag">HTML5</span>
               <span class="tech-tag">CSS3</span>
