Fix things I missed

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         <div class="project-details">
           <span class="project-tag">Featured Project</span>
           <h2>Rental Management App</h2>
-          <p>A comprehensive full-stack rental application for both renters and owners that seamlessly syncs with major platforms like Airbnb and VRBO. Built with to provide property renters and owners with a centralized dashboard for managing bookings, pricing, and communications.</p>
+          <p>A comprehensive full-stack rental application for both renters and owners that seamlessly syncs with major platforms like Airbnb and VRBO. Built with React, Node.js, and MongoDB to provide property renters and owners with a centralized dashboard for managing bookings, pricing, and communications.</p>
           <div class="tech-stack">
             <span class="tech-tag">React</span>
             <span class="tech-tag">Node.js</span>
