Update navigation and links to use root-relative paths

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="https://github.com/gabrieldorosh.png" alt="Gabriel Dorosh"/>
       <h1>Gabriel Dorosh</h1>
       <p>Software Engineer | Computer Science Student</p>
-      <a href="projects.html" class="btn btn-ghost">View My Projects</a>
+      <a href="/projects" class="btn btn-ghost">View My Projects</a>
     </div>
   </section>
 
