--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-links">
-    <a href="index.html">HOME</a>
-    <a href="projects.html">PROJECTS</a>
+    <a href="/">HOME</a>
+    <a href="/projects">PROJECTS</a>
   </div>
   <div class="header-name" id="header-name">Gabriel Dorosh</div>
   <div class="mobile-menu-toggle" id="mobile-menu-toggle">
@@ -10,8 +10,8 @@
     <span></span>
   </div>
   <div class="mobile-menu" id="mobile-menu">
-    <a href="index.html">HOME</a>
-    <a href="projects.html">PROJECTS</a>
+    <a href="/">HOME</a>
+    <a href="/projects">PROJECTS</a>
   </div>
   <div class="social-icons">
     <a href="https://www.linkedin.com/in/gabrieldorosh"
