--- a/404.html
+++ b/404.html
@@ -104,14 +104,14 @@
       <h3>Oops! Page Not Found</h3>
       
       <div class="error-actions">
-        <a href="index.html" class="btn btn-primary">
+        <a href="/" class="btn btn-primary">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
             <polyline points="9,22 9,12 15,12 15,22"/>
           </svg>
           Go Home
         </a>
-        <a href="projects.html" class="btn btn-outline">
+        <a href="/projects" class="btn btn-outline">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
             <line x1="8" y1="21" x2="16" y2="21"/>
