Redid the mobile menu (so it isn't ugly)

--- a/nav.html
+++ b/nav.html
@@ -3,15 +3,13 @@
     <a href="/">HOME</a>
     <a href="/projects">PROJECTS</a>
   </div>
-  <div class="header-name" id="header-name">Gabriel Dorosh</div>
+  <div class="header-name" id="header-name">
+    <a href="/">Gabriel Dorosh</a>
+  </div>
   <div class="mobile-menu-toggle" id="mobile-menu-toggle">
     <span></span>
     <span></span>
     <span></span>
-  </div>
-  <div class="mobile-menu" id="mobile-menu">
-    <a href="/">HOME</a>
-    <a href="/projects">PROJECTS</a>
   </div>
   <div class="social-icons">
     <a href="https://www.linkedin.com/in/gabrieldorosh"
@@ -45,5 +43,9 @@
                 12.014 0 0024 12.297c0-6.627-5.373-12-12-12"/>
       </svg>
     </a>
+  </div>
+  <div class="mobile-menu" id="mobile-menu">
+    <a href="/">HOME</a>
+    <a href="/projects">PROJECTS</a>
   </div>
 </nav>
