Enhance layout and spacing for header and about sections; improve image height management for better responsiveness

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h3>I am a passionate computer science student and software engineer.</h3>
           <p>I'm a computer science student at the University of Reading with a deep passion for building programs. Over the past few years I've been honing my development skills, making responsive UIs with many frameworks, and managing modern databases. My coursework has given me a rock-solid foundation in algorithms, data structures and software architecture, and I've been applying that knowledge inside and out of several university and personal projects.</p>
           <p>Whilst my passion for tech grew, so did my love for travel. I spent winters teaching skiing in the Alps and summers working at a white water rafting centre, doing these sharpened my adaptability, teamwork and problem-solving skills under pressure.</p>
-          <p>Right now, I'm seeking for opportunities to bring my expertise and full-stack experience into an innovative engineering team. If you're looking for someone with an eagerness to learn, let's connect!</p>
+          <p>Right now, I'm seeking opportunities to bring my expertise and full-stack experience into an innovative engineering team. If you're looking for someone with an eagerness to learn, let's connect!</p>
         </div>
         <div class="about-image">
           <img src="images/me_in_garden.jpg" alt="Gabriel in garden" />
@@ -53,7 +53,6 @@
       
       <div class="travel-grid">
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Summer '23</div>
           <div class="tilt-inner">
             <img src="images/japan_van.png" alt="Van life in Japan" />
@@ -62,7 +61,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Winter '22</div>
           <div class="tilt-inner">
             <img src="images/japan_view.jpg" alt="Mount Fuji view" />
@@ -71,7 +69,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Summer '23</div>
           <div class="tilt-inner">
             <img src="images/kyoto.JPG" alt="Kyoto city" />
@@ -83,7 +80,6 @@
 
       <div class="travel-grid travel-grid-secondary">
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Winter '21</div>
           <div class="tilt-inner">
             <img src="images/austrian-alps.jpg" alt="Austria Alps" />
@@ -92,7 +88,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Spring '24</div>
           <div class="tilt-inner">
             <img src="images/england.jpg" alt="England countryside" />
@@ -101,7 +96,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Apr '25</div>
           <div class="tilt-inner">
             <img src="images/amsterdam.jpg" alt="Amsterdam" />
@@ -113,7 +107,6 @@
 
       <div class="travel-grid travel-grid-secondary">
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Anniversary Jan '23</div>
           <div class="tilt-inner">
             <img src="images/sapporo.jpg" alt="Sapporo" />
@@ -122,7 +115,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">Dec '22</div>
           <div class="tilt-inner">
             <img src="images/dorms.jpg" alt="Dorm at the resort" />
@@ -131,7 +123,6 @@
           </div>
         </div>
         <div class="travel-destination" data-tilt>
-          <div class="tilt-shine"></div>
           <div class="polaroid-date">June '23</div>
           <div class="tilt-inner">
             <img src="images/nara.JPG" alt="Future adventures" />
