Adjust header padding and polaroid description

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="tilt-inner">
             <img src="images/japan_van.png" alt="Van life in Japan" />
             <h4>Living in a van</h4>
-            <p>Me and Paige spent a summer driving across Japan experiencing the culture firsthand.</p>
+            <p>My girlfriend, Paige, and I spent a summer driving across Japan experiencing the culture firsthand.</p>
           </div>
         </div>
         <div class="travel-destination" data-tilt>
