Added scroll animations

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div class="about-container">
       
       <div class="about-content">
-        <div class="about-text">
+        <div class="about-text slide-right">
           <h3>I am a passionate computer science student and software engineer.</h3>
           <p>I'm a computer science student at the University of Reading with a deep passion for building programs. Over the past few years I've been honing my development skills, making responsive UIs with many frameworks, and managing modern databases. My coursework has given me a rock-solid foundation in algorithms, data structures and software architecture, and I've been applying that knowledge inside and out of several university and personal projects.</p>
           <p>Whilst my passion for tech grew, so did my love for travel. I spent winters teaching skiing in the Alps and summers working at a white water rafting centre, doing these sharpened my adaptability, teamwork and problem-solving skills under pressure.</p>
           <p>Right now, I'm seeking opportunities to bring my expertise and full-stack experience into an innovative engineering team. If you're looking for someone with an eagerness to learn, let's connect!</p>
         </div>
-        <div class="about-image">
+        <div class="about-image slide-left">
           <img src="images/me_in_garden.jpg" alt="Gabriel in garden" />
           <a href="mailto:gabriel@dorosh.co.uk?subject=Hello Gabriel&body=Hi Gabriel,%0D%0A%0D%0AI came across your website and would like to connect.%0D%0A%0D%0ABest regards," class="btn btn-primary">Contact me directly</a>
         </div>
@@ -48,11 +48,11 @@
 
   <section class="travel">
     <div class="travel-container">
-      <h2>Travel Adventures</h2>
-      <p class="travel-subtitle">Exploring the world one destination at a time</p>
+      <h2 class="fade-in">Travel Adventures</h2>
+      <p class="travel-subtitle fade-in">Exploring the world one destination at a time</p>
       
       <div class="travel-grid">
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-1" data-tilt>
           <div class="polaroid-date">Summer '23</div>
           <div class="tilt-inner">
             <img src="images/japan_van.png" alt="Van life in Japan" />
@@ -60,7 +60,7 @@
             <p>My girlfriend, Paige, and I spent a summer driving across Japan experiencing the culture firsthand.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-2" data-tilt>
           <div class="polaroid-date">Winter '22</div>
           <div class="tilt-inner">
             <img src="images/japan_view.jpg" alt="Mount Fuji view" />
@@ -68,7 +68,7 @@
             <p>Early morning views from the resort I worked at in Rusutsu.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-3" data-tilt>
           <div class="polaroid-date">Summer '23</div>
           <div class="tilt-inner">
             <img src="images/kyoto.JPG" alt="Kyoto city" />
@@ -79,7 +79,7 @@
       </div>
 
       <div class="travel-grid travel-grid-secondary">
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-1" data-tilt>
           <div class="polaroid-date">Winter '21</div>
           <div class="tilt-inner">
             <img src="images/austrian-alps.jpg" alt="Austria Alps" />
@@ -87,7 +87,7 @@
             <p>My uncle and cousin have been taking me up their local mountains in Austria since I was 14.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-2" data-tilt>
           <div class="polaroid-date">Spring '24</div>
           <div class="tilt-inner">
             <img src="images/england.jpg" alt="England countryside" />
@@ -95,7 +95,7 @@
             <p>Even nearby there are beautiful views to see and walks to go on with my dog.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-3" data-tilt>
           <div class="polaroid-date">Apr '25</div>
           <div class="tilt-inner">
             <img src="images/amsterdam.jpg" alt="Amsterdam" />
@@ -106,7 +106,7 @@
       </div>
 
       <div class="travel-grid travel-grid-secondary">
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-1" data-tilt>
           <div class="polaroid-date">Anniversary Jan '23</div>
           <div class="tilt-inner">
             <img src="images/sapporo.jpg" alt="Sapporo" />
@@ -114,7 +114,7 @@
             <p>Some bells me and Paige visited at the top of a mountain during a weekend away in Sapporo.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-2" data-tilt>
           <div class="polaroid-date">Dec '22</div>
           <div class="tilt-inner">
             <img src="images/dorms.jpg" alt="Dorm at the resort" />
@@ -122,7 +122,7 @@
             <p>The dorm I shared with other instructors at the resort was ever so slightly crowded.</p>
           </div>
         </div>
-        <div class="travel-destination" data-tilt>
+        <div class="travel-destination slide-up stagger-delay-3" data-tilt>
           <div class="polaroid-date">June '23</div>
           <div class="tilt-inner">
             <img src="images/nara.JPG" alt="Future adventures" />
