--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <main class="projects-main">
     <div class="projects-container">
       <!-- Featured Project -->
-      <div class="featured-project">
+      <div class="featured-project slide-up">
         <div class="project-image">
           <img src="images/project_one.png" alt="Rental App Screenshot">
         </div>
@@ -64,9 +64,9 @@
 
       <!-- Other Projects Grid -->
       <div class="projects-grid">
-        <h3>Other Projects</h3>
+        <h3 class="fade-in">Other Projects</h3>
         
-        <div class="project-card">
+        <div class="project-card slide-up stagger-delay-1">
           <div class="project-card-image">
             <img src="images/project_two.png" alt="QR Code Generator">
           </div>
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card slide-up stagger-delay-2">
           <div class="project-card-image">
             <img src="images/project_three.png" alt="Personal Website">
           </div>
