Add typing animation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div class="hero-content">
       <img src="https://github.com/gabrieldorosh.png" alt="Gabriel Dorosh"/>
       <h1>Gabriel Dorosh</h1>
-      <p>Software Engineer | Computer Science Student</p>
+      <p class="typing-text" id="typing-text">
+        <span class="typed-text"></span><span class="cursor"></span>
+      </p>
       <a href="/projects" class="btn btn-ghost">View My Projects</a>
     </div>
   </section>
