Added secret page ;)

--- a/nav.html
+++ b/nav.html
@@ -2,6 +2,7 @@
   <div class="nav-links">
     <a href="/">HOME</a>
     <a href="/projects">PROJECTS</a>
+    <a href="/gaming" class="secret-gaming-link"><span class="secret-gaming-link-text">GAMING</span></a>
   </div>
   <div class="header-name" id="header-name">
     <a href="/">Gabriel Dorosh</a>
@@ -17,7 +18,6 @@
        aria-label="LinkedIn">
       <svg role="img" viewBox="0 0 24 24" fill="currentColor"
            xmlns="http://www.w3.org/2000/svg">
-        <title>LinkedIn</title>
         <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5
                 1.1 1 2.48 1 4.98 2.12 4.98 3.5zM.05 7.5h4.9V24H.05V7.5zM8.55
                 7.5h4.7v2.2h.1c.6-1.2 2.1-2.5 4.35-2.5 4.65 0 5.5 3.1 5.5
@@ -30,7 +30,6 @@
        aria-label="GitHub">
       <svg role="img" viewBox="0 0 24 24" fill="currentColor"
            xmlns="http://www.w3.org/2000/svg">
-        <title>GitHub</title>
         <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.3 3.438 9.8
                 8.207 11.383.6.113.793-.26.793-.577 0-.285-.01-1.04-.015-2.04-3.338.727-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.091-.746.083-.731.083-.731 1.205.085 1.84
                 1.237 1.84 1.237 1.07 1.834 2.809 1.304 3.495.997.108-.775.42-1.305.762-1.605-2.665-.305-5.467-1.332-5.467-5.931 0-1.31.465-2.381
